openshift/Opentlc_lab/lab3_Test_network_policy/network-policy/allow-8080-emailsvc.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-8080-emailsvc
spec:
  podSelector:
    matchLabels:
      app: emailsvc
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: userregservices
    ports:
    - protocol: TCP
      port: 8080
