openshift/Opentlc_lab/lab3_Test_network_policy/network-policy/allow-8080-frontend.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-8080-frontend
spec:
  podSelector:
    matchLabels:
      app: userreg
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
